--- a/snap.html
+++ b/snap.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html>
 <head> 
-<script type="text/javascript" src="jquery-1.8.2.min.js"></script>
+<script type="text/javascript" src="thirdparty/jquery-1.8.2.min.js"></script>
+<script type="text/javascript" src="thirdparty/snap.svg.js"></script>  
 <script type="text/javascript" src="vectra/events.js"></script>  
-<script type="text/javascript" src="vectra/snap.svg.js"></script>  
 <script type="text/javascript" src="vectra/snap.selectable.js"></script>  
 <script type="text/javascript" src="vectra/snap.rotatable.js"></script>  
 <script type="text/javascript" src="vectra/snap.canvas.js"></script>   
