--- a/snap.html
+++ b/snap.html
@@ -11,7 +11,7 @@
 <script type="text/javascript" src="custom.js"></script>
 <style>
     .drawingArea{
-            background-color: pink
+        background-color: pink; 
     }
     #textEdit{
         position: absolute; 
@@ -22,7 +22,9 @@
 <title>Web Editor</title>
 </head>
 <body>   
-    <svg id="drawingArea"  height="600" width="800"></svg> 
-    <input id="textEdit"/>
+    <div style="left: 100px; top: 200px; position: absolute; left: 20px; top: 20px">
+        <svg id="drawingArea"  height="600" width="800"></svg> 
+        <input id="textEdit"/>
+    </div>
 </body>
 </html>
